--- a/book.toml
+++ b/book.toml
@@ -9,4 +9,4 @@ title = "REVEN API Cookbook"
 additional-css = ["bulma.css"]
 
 [preprocessor.tera]
-command = "mdbook-tera --toml ./contexts/default.toml"
+command = "mdbook-tera --toml ./contexts/github.toml"
