Make the user_doc directory a variable

--- a/book.toml
+++ b/book.toml
@@ -9,3 +9,4 @@ title = "REVEN API Cookbook"
 additional-css = ["bulma.css"]
 
 [preprocessor.tera]
+command = "mdbook-tera --toml ./contexts/default.toml"
