--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,16 +18,13 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt update && sudo apt install -y binutils build-essential
-          wget -O - https://sh.rustup.rs | sh -s -- -y -q
-          source $HOME/.cargo/env
-          cargo install --version "0.4.13" mdbook
-          cargo install --version "0.4.0" mdbook-tera
+          wget -O - https://github.com/rust-lang/mdBook/releases/download/v0.4.14/mdbook-v0.4.14-x86_64-unknown-linux-gnu.tar.gz | tar xvzf -
+          wget -O - https://github.com/avitex/mdbook-tera/releases/download/v0.4.2/mdbook-tera-x86_64-unknown-linux-gnu.tar.gz | tar xvzf -
 
  
       - name: Build the book
         run: |
-          MDBOOK_PREPROCESSOR__TERA__COMMAND="mdbook-tera --toml ./contexts/standalone.toml" mdbook build
+          MDBOOK_PREPROCESSOR__TERA__COMMAND="./mdbook-tera --toml ./contexts/standalone.toml" ./mdbook build
           cp -r static book/
       
       - name: Disable jekyll
