--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,18 +18,18 @@ jobs:
 
       - name: Install dependencies
         run: |
-          wget -O - https://github.com/rust-lang/mdBook/releases/download/v0.4.14/mdbook-v0.4.14-x86_64-unknown-linux-gnu.tar.gz | tar xvzf -
-          wget -O - https://github.com/avitex/mdbook-tera/releases/download/v0.4.2/mdbook-tera-x86_64-unknown-linux-gnu.tar.gz | tar xvzf -
+          wget -O - https://github.com/rust-lang/mdBook/releases/download/v0.4.14/mdbook-v0.4.14-x86_64-unknown-linux-gnu.tar.gz | tar -xvzf - -C /usr/local/bin
+          wget -O - https://github.com/avitex/mdbook-tera/releases/download/v0.4.2/mdbook-tera-x86_64-unknown-linux-gnu.tar.gz | tar -xvzf - -C /usr/local/bin
 
- 
+
       - name: Build the book
         run: |
-          MDBOOK_PREPROCESSOR__TERA__COMMAND="./mdbook-tera --toml ./contexts/standalone.toml" ./mdbook build
+          MDBOOK_PREPROCESSOR__TERA__COMMAND="mdbook-tera --toml ./contexts/standalone.toml" mdbook build
           cp -r static book/
-      
+
       - name: Disable jekyll
         run: touch book/.nojekyll
-        
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.ref == 'refs/heads/master' }}
