--- a/book.toml
+++ b/book.toml
@@ -3,7 +3,7 @@ authors = ["Louis Dureuil"]
 language = "en"
 multilingual = false
 src = "src"
-title = "REVEN API Cookbook"
+title = "Reven API Cookbook"
 
 [output.html]
 additional-css = ["bulma.css"]
